--- a/index.html
+++ b/index.html
@@ -1,51 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./styles/style.css">
-  <title>Frontend Mentor | Interactive rating component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Frontend Mentor | Interactive rating component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  </head>
+  <body>
     <div class="main">
-      <img src="./images/icon-star.svg" alt="rating star image" srcset="">
+      <div class="image">
+        <img src="./images/icon-star.svg" alt="rating star image" srcset="" />
+      </div>
       <h2 class="header">How did we do?</h2>
-      <p class="text"> Please let us know how we did with your support request. All feedback is appreciated 
-        to help us improve our offering!</p>
-        <div class="rates">
-          <div>1</div>
-          <div>2</div>
-          <div>3</div>
-          <div>4</div>
-          <div>5</div>
-        </div>
-        <button type="submit">Submit</button>
+      <p class="text">
+        Please let us know how we did with your support request. All feedback is
+        appreciated to help us improve our offering!
+      </p>
+      <div class="rates">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+      </div>
+      <button class="submit" type="submit">SUBMIT</button>
     </div>
 
-
-
-
-  
-
- 
-
- 
-
-  
-
-  
-
-  <!-- Thank you state start
+    <!-- Thank you state start
 
   You selected  Add rating here  out of 5
 
@@ -55,6 +52,5 @@
   don’t hesitate to get in touch!
 
    Thank you state end -->
-
-</body>
+  </body>
 </html>
