done with styling

--- a/index.html
+++ b/index.html
@@ -33,24 +33,22 @@
         appreciated to help us improve our offering!
       </p>
       <div class="rates">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
+        <div class="value">1</div>
+        <div class="value">2</div>
+        <div class="value">3</div>
+        <div class="value">4</div>
+        <div class="value">5</div>
       </div>
       <button class="submit" type="submit">SUBMIT</button>
     </div>
-
-    <!-- Thank you state start
-
-  You selected  Add rating here  out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-   Thank you state end -->
+<div class="thanks main">
+  <div class="illustration-thanks">
+    <img src="./images/illustration-thank-you.svg" alt="" srcset="">
+  </div>
+  <div class="rating-detail"><p>You rated <Span id="rate-value">0</Span> out of 5</p></div>
+  <h1 class="header">Thank You!</h1>
+  <p class="text">We appreciate you taking the timw to give a rating.If you ever need more support do not forget to get in touch</p>
+</div>
+<script src="./scripts/app.js"></script>
   </body>
 </html>
